--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <script type="text/javascript">
       window.navLogo = "<%= image_url('petsyWhiteSquareCropped.png') %>"
+      window.aboutPetsy = "<%= image_url('aboutPetsy.png') %>"
+      window.defaultAvatar = "<%= image_url('defaultAvatar.jpg') %>"
     </script>
   </head>
 
