--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,12 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <script type="text/javascript">
       window.navLogo = "<%= image_url('petsyWhiteSquareCropped.png') %>"
-      window.aboutPetsy = "<%= image_url('aboutPetsy.png') %>"
+      window.aboutPetsy = "<%= image_url('aboutPetsy.jpg') %>"
       window.defaultAvatar = "<%= image_url('defaultAvatar.jpg') %>"
+      window.aboutBlue = "<%= image_url('aboutPetsyBlue.jpg') %>"
+      window.aboutOrange = "<%= image_url('aboutPetsyOrange.jpg') %>"
+      window.aboutYellow = "<%= image_url('aboutPetsyYellow.jpg') %>"
+      window.blogPlaceholder = "<%= image_url('blogPlaceholder.jpg') %>"
     </script>
   </head>
 
