--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,14 @@
     <%= javascript_include_tag 'application' %>
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script>
+        $(document).ready(function(){
+            $(".avatar-dropdown").click(function () {
+                $("#panel").slideToggle(100);
+            });
+        });
+    </script>
     <script type="text/javascript">
       window.navLogo = "<%= image_url('petsyWhiteSquareCropped.png') %>"
       window.aboutPetsy = "<%= image_url('aboutPetsy.jpg') %>"
@@ -17,6 +25,17 @@
       window.aboutOrange = "<%= image_url('aboutPetsyOrange.jpg') %>"
       window.aboutYellow = "<%= image_url('aboutPetsyYellow.jpg') %>"
       window.blogPlaceholder = "<%= image_url('blogPlaceholder.jpg') %>"
+      window.usaFlag = "<%= image_url('usaFlag.png') %>"
+      window.gift1 = "<%= image_url('gift1.jpg') %>"
+      window.latest1 = "<%= image_url('latest1.jpg') %>"
+      window.latest2 = "<%= image_url('latest2.jpeg') %>"
+      window.mainLeft = "<%= image_url('main-left.jpg') %>"
+      window.mainRight = "<%= image_url('mainRight.jpg') %>"
+      window.popular1 = "<%= image_url('popular1.jpg') %>"
+      window.personalized1 = "<%= image_url('personalized1.jpeg') %>"
+      window.personalized2 = "<%= image_url('personalized2.jpeg') %>"
+      window.personalized3 = "<%= image_url('personalized3.jpeg') %>"
+      window.recent1 = "<%= image_url('recent1.jpg') %>"
     </script>
   </head>
 
