--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,13 +28,13 @@
       window.usaFlag = "<%= image_url('usaFlag.png') %>"
       window.gift1 = "<%= image_url('gift1.jpg') %>"
       window.latest1 = "<%= image_url('latest1.jpg') %>"
-      window.latest2 = "<%= image_url('latest2.jpeg') %>"
+      window.latest2 = "<%= image_url('latest2.jpg') %>"
       window.mainLeft = "<%= image_url('main-left.jpg') %>"
       window.mainRight = "<%= image_url('mainRight.jpg') %>"
       window.popular1 = "<%= image_url('popular1.jpg') %>"
-      window.personalized1 = "<%= image_url('personalized1.jpeg') %>"
-      window.personalized2 = "<%= image_url('personalized2.jpeg') %>"
-      window.personalized3 = "<%= image_url('personalized3.jpeg') %>"
+      window.personalized1 = "<%= image_url('personalized1.jpg') %>"
+      window.personalized2 = "<%= image_url('personalized2.jpg') %>"
+      window.personalized3 = "<%= image_url('personalized3.jpg') %>"
       window.recent1 = "<%= image_url('recent1.jpg') %>"
     </script>
   </head>
