--- a/app/assets/stylesheets/cart.css.scss
+++ b/app/assets/stylesheets/cart.css.scss
@@ -4,6 +4,10 @@
   padding: 2% 0 5%;
 }
 
+.cart-container input[type=number] {
+  width: 60%;
+}
+
 .cart-item-container {
   background-color: white;
   width: 80%;
