--- a/app/assets/stylesheets/product.css.scss
+++ b/app/assets/stylesheets/product.css.scss
@@ -116,11 +116,17 @@
 
 .review-form-container form textarea {
   display: block;
+  border-radius: 5px;
+  font-size: 16px;
+  padding: 1%;
 }
 
 .review-form-container input[type=text] {
   width: 28vw;
   margin-bottom: 1%;
+  border-radius: 5px;
+  font-size: 16px;
+  padding: 1%;
 }
 
 .review-form-container input[type=submit] {
@@ -130,6 +136,7 @@
   color: white;
   padding: 2%;
   margin-top: 1%;
+  border-radius: 5px;
 }
 
 .review-form-container input[type=submit]:hover {
@@ -162,3 +169,9 @@
 .star-rating label:hover ~ label {
   color:#f90;
 }
+
+.product-errors {
+  list-style-type: none;
+  color: red;
+}
+
