--- a/app/assets/stylesheets/blog.css.scss
+++ b/app/assets/stylesheets/blog.css.scss
@@ -170,10 +170,12 @@
 .latest-item {
   width: 49%;
   border: 1px solid rgb(213, 213, 213);
+  display: flex;
 }
 
 .latest-item img {
   height: 45vh;
+  width: 50%;
 }
 
 .latest-item-text h3 {
@@ -188,7 +190,11 @@
 }
 
 .latest-item-text {
-  margin: 15% 0 0 3%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
 }
 
 .latest-links:hover {
