--- a/app/assets/stylesheets/sell.css.scss
+++ b/app/assets/stylesheets/sell.css.scss
@@ -1,5 +1,5 @@
 .sell-container {
-    background-image: image_url('petCollage.jpg');
+    background-image: url('https://s3.amazonaws.com/aa-petsy-public/petCollage.jpg');
     background-size: 100% 100%;
     height: 30vh;
 }
