add product index item links

--- a/app/assets/stylesheets/product_index.css.scss
+++ b/app/assets/stylesheets/product_index.css.scss
@@ -41,6 +41,10 @@
     position: relative;
 }
 
+.index-item-container:hover {
+    cursor: pointer;
+}
+
 .index-item-container h3 {
     text-align: center;
 }
