--- a/app/assets/stylesheets/product_index.css.scss
+++ b/app/assets/stylesheets/product_index.css.scss
@@ -1,6 +1,6 @@
 .product-index-container ul {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-wrap: wrap;
 }
 
