add stars to reviews

--- a/app/assets/stylesheets/product.css.scss
+++ b/app/assets/stylesheets/product.css.scss
@@ -176,3 +176,35 @@
   color: red;
 }
 
+
+// REVIEW STARS
+.star-ratings-css {
+ unicode-bidi: bidi-override;
+ color: #c5c5c5;
+ font-size: 25px;
+ height: 25px;
+ width: 100px;
+ margin: 0 0 2% 0;
+ position: relative;
+
+ text-shadow: 0px 1px 0 #c9c9c9;
+
+ &-top {
+   color: gold;
+   padding: 0;
+   position: absolute;
+   z-index: 1;
+   display: block;
+   top: 0;
+   left: 0;
+   overflow: hidden;
+   font-size: 20px;
+ }
+
+ &-bottom {
+   padding: 0;
+   display: block;
+   z-index: 0;
+   font-size: 20px;
+ }
+}
