--- a/app/assets/stylesheets/product_index.css.scss
+++ b/app/assets/stylesheets/product_index.css.scss
@@ -54,7 +54,7 @@
 }
 
 .index-item-container h3 {
-    text-align: center;
+    font-family: "Guardian-EgypTT",serif;
 }
 
 .nav-container h1 {
@@ -69,4 +69,5 @@
 
 .index-item-text p {
     font-weight: bold;
+    font-size: 18px;
 }
