--- a/app/assets/stylesheets/product_index.css.scss
+++ b/app/assets/stylesheets/product_index.css.scss
@@ -39,6 +39,7 @@
     height: 30vh;
     margin-bottom: 8%;
     position: relative;
+    box-shadow: 0px 0px 3px 3px grey;
     // disable text highlighting
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -50,7 +51,7 @@
 
 .index-item-container:hover {
     cursor: pointer;
-    box-shadow: 0px 0px 3px 3px grey;
+    
 }
 
 .index-item-container h3 {
@@ -68,6 +69,6 @@
 }
 
 .index-item-text p {
-    font-weight: bold;
-    font-size: 18px;
+    font-weight: 500;
+    font-size: 14px;
 }
