--- a/app/assets/stylesheets/product_index.css.scss
+++ b/app/assets/stylesheets/product_index.css.scss
@@ -23,6 +23,7 @@
     background-color: rgba(245, 245, 245, 0.651);
     padding: 5%;
     top: 40%;
+    color: rgb(85, 85, 85);
 }
 
 .ici-right {
